qa/apps/keycloak/configure-troubleshoot-terraform.yml
apiVersion: v1
kind: Pod
metadata:
  name: configure-keycloak
  namespace: clin-qa
spec:
  imagePullSecrets:
    - name: images-pull
  restartPolicy: Never
  volumes:
    - name: ssh-key
      secret:
        secretName: keycloak-terraform-github-ssh-key
        defaultMode: 0400
    - name: terraform-scripts
      configMap:
        name: terraform-scripts
        defaultMode: 0555
    - name: keycloak-configs-provider
      secret:
        secretName: keycloak-terraform-provider-file
        defaultMode: 0555
    - name: etcd-backend
      configMap:
        name: keycloak-terraform-backend-file
        defaultMode: 0555
    - name: etcd-ca-cert
      secret:
        secretName: etcd-alpha-ops-ca-cert
        defaultMode: 0555
    - name: etcd-client-cert
      secret:
        secretName: etcd-alpha-ops-terraform-keycloak-cert
        defaultMode: 0555
    - name: terraform
      emptyDir: {}
  containers:
    - image: hashicorp/terraform:0.14.4
      name: configure
      command: ["sleep", "infinity"]
      volumeMounts:
        - name: terraform
          mountPath: /opt/terraform
        - name: terraform-scripts
          mountPath: /opt/scripts
          readOnly: true
        - name: keycloak-configs-provider
          mountPath: /opt/providers
          readOnly: true
        - name: etcd-backend
          mountPath: /opt/backend
          readOnly: true
        - name: etcd-ca-cert
          mountPath: /opt/etcd-ca
          readOnly: true
        - name: etcd-client-cert
          mountPath: /opt/etcd-client-cert
          readOnly: true
