qa/apps/keycloak/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "24k"
spec:
  tls:
    - hosts:
      - auth.qa.clin.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: auth.qa.clin.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: keycloak-http
            servicePort: 80
